src/objects/Application_Support__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Access_Restrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this application contain sensitive data and require an application specific NDA or agreement to be signed?</inlineHelpText>
        <label>Admin Access Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliated_Organization__c</fullName>
        <label>SF Environment (Org)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>EEO</fullName>
                </value>
                <value>
                    <fullName>GEO</fullName>
                </value>
                <value>
                    <fullName>PBS Client Solutions</fullName>
                </value>
                <value>
                    <fullName>PBS Property Disposal</fullName>
                </value>
                <value>
                    <fullName>PBS Workspaces</fullName>
                </value>
                <value>
                    <fullName>PEO</fullName>
                </value>
                <value>
                    <fullName>PTT-Blue</fullName>
                </value>
                <value>
                    <fullName>PTT-Red</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Names__c</fullName>
        <inlineHelpText>Alternate Names of the App Name.</inlineHelpText>
        <label>Alternate Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_Description__c</fullName>
        <label>App Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>App_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Module</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_or_System__c</fullName>
        <inlineHelpText>this is srini test</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is CRM License required for accessing application (or) a portion of the application?</description>
        <inlineHelpText>Is CRM License required for accessing application (or) a portion of the application?</inlineHelpText>
        <label>CRM License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dedicated_Team_Tier_1__c</fullName>
        <label>Dedicated Team Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedicated_Team_Tier_2__c</fullName>
        <label>Dedicated Team Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedicated_Team_Tier_3__c</fullName>
        <label>Dedicated Team Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Module1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <inlineHelpText>Date of the Initial Deployment to Production.</inlineHelpText>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Org_Office__c</fullName>
        <inlineHelpText>Primary Organization (or) Office that is Sponsoring the Application.</inlineHelpText>
        <label>Org/Office</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Sets__c</fullName>
        <label>Permission Sets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASTO</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <label>Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipName>Application_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_duplicate_check__c</fullName>
        <label>Project duplicate check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Public_Groups__c</fullName>
        <label>Public Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Module2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Module4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner 4</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Module5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Module3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Desk_Email__c</fullName>
        <defaultValue>&quot;hamedullah.mohammed@gsa.gov&quot;</defaultValue>
        <label>Service Desk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status_In_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status - In Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>GSAdotGov</fullName>
                </value>
                <value>
                    <fullName>InSite</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Provisioning_Description__c</fullName>
        <label>OCIO Control Center Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>caseapplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>caseapplication</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Application_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Module</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Retirement_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retirement_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/1/2016</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCAMEOsupportedAppsActive</fullName>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>contains</operation>
            <value>CAMEO</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_All CAMEO-supported Apps - Active</label>
    </listViews>
    <listViews>
        <fullName>AllFASrelatedAppsActive</fullName>
        <booleanFilter>(1 AND 2) OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>startsWith</operation>
            <value>GSA IT - FAS</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>CMLS,Marketing Campaign</value>
        </filters>
        <label>__All FAS-related Apps - Active</label>
    </listViews>
    <listViews>
        <fullName>AllFASrelatedAppsNOTActive</fullName>
        <booleanFilter>(1 AND 2) OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>contains</operation>
            <value>GSA IT - FAS</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>CMLS</value>
        </filters>
        <label>__All FAS-related Apps - NOT Active</label>
    </listViews>
    <listViews>
        <fullName>AllGSAsupportedAppsActive</fullName>
        <booleanFilter>(1 AND 2) OR (2 AND 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>contains</operation>
            <value>GSA IT -</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>CMLS,Marketing Campaign,Pegasys Data Entry Tool</value>
        </filters>
        <label>___All GSA IT-supported Apps - Active</label>
    </listViews>
    <listViews>
        <fullName>AllGSAsupportedAppsNOTActive</fullName>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>contains</operation>
            <value>GSA IT -</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>__All GSA IT-supported Apps - NOT Active</label>
    </listViews>
    <listViews>
        <fullName>AllNonSFsupportedAppsActive</fullName>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Affiliated_Organization__c</field>
            <operation>equals</operation>
            <value>N/A</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_All NON-SF Apps - Active</label>
    </listViews>
    <listViews>
        <fullName>AllNonSFsupportedAppsNOTActive</fullName>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Affiliated_Organization__c</field>
            <operation>equals</operation>
            <value>N/A</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>_All NON-SF Apps - NOT Active</label>
    </listViews>
    <listViews>
        <fullName>AllOGPsupportedAppsActive</fullName>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>equals</operation>
            <value>OGP</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_All OGP-supported Apps - Active</label>
    </listViews>
    <listViews>
        <fullName>AllPBSrelatedAppsActive</fullName>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>contains</operation>
            <value>GSA IT - PBS</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>__All PBS-related Apps - Active</label>
    </listViews>
    <listViews>
        <fullName>AllPBSrelatedAppsNOTActive</fullName>
        <columns>NAME</columns>
        <columns>App_Owner__c</columns>
        <columns>Secondary_Owner__c</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>Permission_Sets__c</columns>
        <columns>Public_Groups__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <columns>App_Description__c</columns>
        <columns>User_Provisioning_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CRM_License__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Org_Office__c</field>
            <operation>contains</operation>
            <value>GSA IT - PBS</value>
        </filters>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>__All PBS-related Apps - NOT Active</label>
    </listViews>
    <listViews>
        <fullName>All_Application_Modules</fullName>
        <columns>NAME</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>App_Owner__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Application Modules</label>
    </listViews>
    <listViews>
        <fullName>All_Application_Modules_Cap</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Status_In_Production__c</columns>
        <columns>App_Owner__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Dedicated_Team_Tier_1__c</field>
            <operation>contains</operation>
            <value>equinoxys</value>
        </filters>
        <filters>
            <field>Dedicated_Team_Tier_2__c</field>
            <operation>contains</operation>
            <value>equinoxys</value>
        </filters>
        <filters>
            <field>Dedicated_Team_Tier_3__c</field>
            <operation>contains</operation>
            <value>equinoxys</value>
        </filters>
        <label>All Application Modules - Cap</label>
    </listViews>
    <listViews>
        <fullName>All_apps_wCRM_requirement</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>CRM_License__c</columns>
        <columns>Org_Office__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_License__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>__All apps w/ CRM requirement</label>
    </listViews>
    <listViews>
        <fullName>All_apps_w_all_Tier_levels</fullName>
        <columns>NAME</columns>
        <columns>Affiliated_Organization__c</columns>
        <columns>Org_Office__c</columns>
        <columns>Dedicated_Team_Tier_1__c</columns>
        <columns>Dedicated_Team_Tier_2__c</columns>
        <columns>Dedicated_Team_Tier_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_In_Production__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>__All apps w/ all Tier levels</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Module</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_for_the_private</fullName>
        <active>false</active>
        <description>Testing weather the project checked as a private</description>
        <errorConditionFormula>Project__r.Private__c = True</errorConditionFormula>
        <errorMessage>Private projects cannot be added .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retirement_Date_for_Active_Apps</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Status_In_Production__c = TRUE, NOT(ISBLANK(Retirement_Date__c)))</errorConditionFormula>
        <errorDisplayField>Retirement_Date__c</errorDisplayField>
        <errorMessage>Retirement Date cannot be populated if Status in Production is Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sec_Own_1_Blank_Sec_Own_2_Filled</fullName>
        <active>true</active>
        <description>Secondary Owner 1 cannot be blank, when Secondary Owner 2 field is filled</description>
        <errorConditionFormula>AND( ISBLANK( Secondary_Owner__c ),  NOT(ISBLANK( Secondary_Owner_2__c )) )</errorConditionFormula>
        <errorDisplayField>Secondary_Owner__c</errorDisplayField>
        <errorMessage>Secondary Owner 1 cannot be blank, when Secondary Owner 2 field is filled. (Either) Move Secondary Owner 2 field value to Secondary Owner 1 field (OR) Delete both Second Owner 1 and Secondary Owner 2 field values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sec_Own_2_Blank_Sec_Own_3_Filled</fullName>
        <active>true</active>
        <description>Secondary Owner 2 cannot be blank, when Secondary Owner 3 field is filled.</description>
        <errorConditionFormula>AND( ISBLANK( Secondary_Owner_2__c ),  NOT(ISBLANK(  Secondary_Owner_3__c )) )</errorConditionFormula>
        <errorDisplayField>Secondary_Owner_2__c</errorDisplayField>
        <errorMessage>Secondary Owner 2 cannot be blank, when Secondary Owner 3 field is filled. (Either) Move Secondary Owner 3 field value to Secondary Owner 2 field (OR) Delete both Second Owner 2 and Secondary Owner 3 field values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sec_Own_3_Blank_Sec_Own_4_Filled</fullName>
        <active>true</active>
        <description>Secondary Owner 3 cannot be blank, when Secondary Owner 4 field is filled.</description>
        <errorConditionFormula>AND( ISBLANK( Secondary_Owner_3__c ),  NOT(ISBLANK(  Secondary_Owner_4__c )) )</errorConditionFormula>
        <errorDisplayField>Secondary_Owner_3__c</errorDisplayField>
        <errorMessage>Secondary Owner 3 cannot be blank, when Secondary Owner 4 field is filled. (Either) Move Secondary Owner 4 field value to Secondary Owner 3 field (OR) Delete both Second Owner 3 and Secondary Owner 4 field values.</errorMessage>
    </validationRules>
</CustomObject>